tests/cases/match/errors/match-tuple-nonexhaustive.ari
fn main() -> i64 {
  return match (1, 2) {
    (1, _) => 10,
  };
}
